:sparkles: funcionalidad de realizar pago terminada
